--- a/TrafficLight2/Base.lproj/Main.storyboard
+++ b/TrafficLight2/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_7" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -14,28 +14,28 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TrafficLight2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="IKH-3y-tNY">
-                                <rect key="frame" x="117.66666666666667" y="65" width="192.66666666666663" height="638.66666666666663"/>
+                                <rect key="frame" x="113.5" y="65" width="187" height="620"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E8W-Ye-0Z0">
-                                        <rect key="frame" x="0.0" y="0.0" width="192.66666666666666" height="193"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="187" height="186.5"/>
                                         <color key="backgroundColor" red="0.86078917980194092" green="0.11121547909558899" blue="0.055538110933725036" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="E8W-Ye-0Z0" secondAttribute="height" multiplier="1:1" id="HzN-AP-tE5"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vyk-kc-XYA">
-                                        <rect key="frame" x="0.0" y="223" width="192.66666666666666" height="193"/>
+                                        <rect key="frame" x="0.0" y="216.5" width="187" height="187"/>
                                         <color key="backgroundColor" systemColor="systemYellowColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="Vyk-kc-XYA" secondAttribute="height" multiplier="1:1" id="UJq-VC-sn0"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dYt-s4-vOu">
-                                        <rect key="frame" x="0.0" y="446.00000000000006" width="192.66666666666666" height="192.66666666666669"/>
+                                        <rect key="frame" x="0.0" y="433.5" width="187" height="186.5"/>
                                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="dYt-s4-vOu" secondAttribute="height" multiplier="1:1" id="CjW-yi-6GU"/>
@@ -44,7 +44,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YsF-HV-P25">
-                                <rect key="frame" x="108" y="823" width="212" height="41"/>
+                                <rect key="frame" x="104.5" y="793" width="205" height="41"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="zYG-sH-AeV"/>
@@ -55,6 +55,9 @@
                                 <state key="normal" title="START">
                                     <color key="titleColor" systemColor="secondarySystemBackgroundColor"/>
                                 </state>
+                                <connections>
+                                    <action selector="changeButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="CsX-Uk-QLQ"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -70,9 +73,9 @@
                     </view>
                     <connections>
                         <outlet property="colorChangeButton" destination="YsF-HV-P25" id="SId-5X-Owg"/>
-                        <outlet property="greenTrafficLight" destination="dYt-s4-vOu" id="ab3-0l-gry"/>
+                        <outlet property="greenTrafficLightLabel" destination="dYt-s4-vOu" id="ab3-0l-gry"/>
                         <outlet property="redTrafficLightLabel" destination="E8W-Ye-0Z0" id="OFS-4k-Vvf"/>
-                        <outlet property="yellowTrafficLight" destination="Vyk-kc-XYA" id="wD2-6G-yyW"/>
+                        <outlet property="yellowTrafficLightLabel" destination="Vyk-kc-XYA" id="wD2-6G-yyW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
