--- a/TrafficLight2/Base.lproj/Main.storyboard
+++ b/TrafficLight2/Base.lproj/Main.storyboard
@@ -72,7 +72,7 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="colorChangeButton" destination="YsF-HV-P25" id="SId-5X-Owg"/>
+                        <outlet property="changeButton" destination="YsF-HV-P25" id="SId-5X-Owg"/>
                         <outlet property="greenTrafficLightLabel" destination="dYt-s4-vOu" id="ab3-0l-gry"/>
                         <outlet property="redTrafficLightLabel" destination="E8W-Ye-0Z0" id="OFS-4k-Vvf"/>
                         <outlet property="yellowTrafficLightLabel" destination="Vyk-kc-XYA" id="wD2-6G-yyW"/>
